--- a/news.html
+++ b/news.html
@@ -24,6 +24,7 @@
   <meta name="twitter:description" content="آخر أخبار مجلس طلاب خطوة."/>
   <meta name="twitter:image" content="https://b.top4top.io/p_35166f7hr1.jpg"/>
 
+  <!-- JSON-LD (قائمة مقالات) -->
   <script type="application/ld+json">
   {
     "@context":"https://schema.org",
@@ -36,20 +37,271 @@
   </script>
 
   <style>
-    /* أنماط CSS مثل السابق */
+    :root {
+      --primary: #1e40af;
+      --primary-600: #1d4ed8;
+      --text: #0f172a;
+      --muted: #64748b;
+      --surface: #ffffff;
+      --card: #f8fafc;
+      --ring: #e6eaf2;
+      --r-md: 14px;
+      --r-lg: 16px;
+      --r-xl: 22px;
+      --sh-sm: 0 2px 10px rgba(2, 6, 23, .06);
+      --sh-md: 0 10px 26px rgba(2, 6, 23, .08);
+    }
+    * { box-sizing: border-box; }
+    html, body { height: 100%; }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", system-ui, -apple-system, Tahoma, Arial, sans-serif;
+      color: var(--text);
+      background: var(--surface);
+    }
+    a { color: inherit; text-decoration: none; }
+    .container { width: min(1120px, 92%); margin-inline: auto; }
 
-    .grid{display:grid;gap:1rem}
-    .grid-3{grid-template-columns:repeat(3,1fr)}
-    @media(max-width:980px){.grid-3{grid-template-columns:1fr}}
-    .post{background:#fff;border:1px solid var(--ring);border-radius:16px;overflow:hidden;box-shadow:var(--sh-sm);display:flex;flex-direction:column}
-    .post img{width:100%;height:auto;aspect-ratio:16/9;object-fit:cover;background:#f3f4f6}
-    .post .body{padding:1rem}
-    .post h3{margin:0 0 .4rem;font-size:1.05rem}
+    /* NAV */
+    .navbar {
+      position: sticky;
+      top: 0;
+      z-index: 40;
+      background: color-mix(in oklab, #ffffff 80%, transparent);
+      border-bottom: 1px solid var(--ring);
+      backdrop-filter: blur(8px);
+    }
+    .nav-inner {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: .8rem 0;
+      gap: .8rem;
+      position: relative;
+    }
+    .brand {
+      display: flex;
+      align-items: center;
+      gap: .8rem;
+      font-weight: 800;
+    }
+    .brand .logo {
+      width: 40px;
+      height: 40px;
+      object-fit: cover;
+      border-radius: 12px;
+      box-shadow: 0 2px 6px rgba(0, 0, 0, .06);
+    }
+    .nav-links {
+      display: flex;
+      gap: .25rem;
+      align-items: center;
+    }
+    .nav-links a {
+      padding: .5rem .75rem;
+      border-radius: var(--r-md);
+    }
+    .nav-links a:hover {
+      background: var(--card);
+    }
+    .nav-links a[aria-current="page"] {
+      background: var(--card);
+    }
+    .lang-toggle, .menu-toggle {
+      padding: .45rem .75rem;
+      border: 1px solid var(--ring);
+      background: #fff;
+      border-radius: var(--r-md);
+      cursor: pointer;
+      font-weight: 600;
+    }
+    .menu-toggle {
+      display: none;
+      align-items: center;
+      gap: .5rem;
+    }
+    .menu-toggle svg { width: 20px; height: 20px; }
+
+    @media (max-width: 900px) {
+      .menu-toggle { display: inline-flex; }
+      .nav-links {
+        position: absolute;
+        inset-inline: 0;
+        top: calc(100% + 8px);
+        background: #fff;
+        border: 1px solid var(--ring);
+        border-radius: var(--r-xl);
+        display: grid;
+        gap: .2rem;
+        padding: .4rem;
+        box-shadow: 0 20px 48px rgba(2, 6, 23, .1);
+        max-height: 80vh;
+        overflow: auto;
+        opacity: 1;
+        transform: scale(1);
+        transition: opacity .2s ease, transform .2s ease, padding .2s ease;
+      }
+      .nav-links[aria-hidden="true"] { transform: scale(.98); opacity: 0; }
+      .nav-links a, .lang-toggle { padding: .7rem .9rem; }
+    }
+
+    /* Sections */
+    section { padding: 2rem 0; }
+    .section-head {
+      display: flex;
+      align-items: flex-end;
+      justify-content: space-between;
+      gap: 1rem;
+      margin-bottom: 1.2rem;
+    }
+    .section-head h1 { margin: 0; font-size: clamp(1.6rem, 2.6vw + 1rem, 2.2rem); }
+    .muted { color: var(--muted); }
+
+    /* Tools row */
+    .tools { display: flex; gap: .6rem; flex-wrap: wrap; align-items: center; }
+    .chip {
+      border: 1px solid var(--ring);
+      background: #fff;
+      border-radius: 999px;
+      padding: .45rem .8rem;
+      font-size: .9rem;
+      cursor: pointer;
+    }
+    .chip[data-active="true"] {
+      background: var(--primary);
+      color: #fff;
+      border-color: transparent;
+    }
+    .search {
+      display: flex;
+      align-items: center;
+      gap: .5rem;
+      border: 1px solid var(--ring);
+      border-radius: 12px;
+      padding: .45rem .6rem;
+      background: #fff;
+      min-width: 240px;
+    }
+    .search input { border: 0; outline: 0; background: transparent; width: 100%; }
+
+    /* Cards grid */
+    .grid { display: grid; gap: 1rem; }
+    .grid-3 { grid-template-columns: repeat(3, 1fr); }
+    @media(max-width: 980px) { .grid-3 { grid-template-columns: 1fr; } }
+    .post {
+      background: #fff;
+      border: 1px solid var(--ring);
+      border-radius: 16px;
+      overflow: hidden;
+      box-shadow: var(--sh-sm);
+      display: flex;
+      flex-direction: column;
+    }
+    .post img {
+      width: 100%;
+      height: auto;
+      aspect-ratio: 16/9;
+      object-fit: cover;
+      background: #f3f4f6;
+    }
+    .post .body { padding: 1rem; }
+    .post h3 { margin: 0 0 .4rem; font-size: 1.05rem; }
+    .meta { display: flex; gap: .6rem; align-items: center; color: var(--muted); font-size: .9rem; margin-bottom: .6rem; }
+    .tags { display: flex; gap: .4rem; flex-wrap: wrap; }
+    .tag {
+      background: var(--card);
+      border: 1px solid var(--ring);
+      padding: .2rem .5rem;
+      border-radius: 999px;
+      font-size: .8rem;
+      color: #334155;
+    }
+    .post a.more {
+      margin-top: auto;
+      display: inline-block;
+      border: 1px solid var(--ring);
+      padding: .6rem .8rem;
+      border-radius: 12px;
+    }
+
+    /* Hover */
+    .post:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 14px 34px rgba(2, 6, 23, .10);
+      transition: .18s;
+    }
+
+    /* Footer */
+    footer {
+      border-top: 1px solid var(--ring);
+      background: #fff;
+    }
+    .foot {
+      display: flex;
+      justify-content: space-between;
+      gap: 1rem;
+      align-items: center;
+      padding: 1.2rem 0;
+    }
+
+    /* Dark Mode */
+    @media (prefers-color-scheme: dark) {
+      :root {
+        --surface: #0a0f1a;
+        --card: #0b1220;
+        --ring: #1f2937;
+        --text: #e5e7eb;
+        --muted: #9ca3af;
+      }
+      .navbar, footer { background: #0c1220; border-color: var(--ring); }
+      .post, .search, .chip { background: #0f172a; border-color: var(--ring); }
+      .nav-links a:hover, .nav-links a[aria-current="page"] { background: #0f172a; }
+      .lang-toggle, .menu-toggle { background: transparent; color: var(--text); }
+    }
+
+    @media (prefers-reduced-motion: reduce) {
+      * {
+        animation-duration: .01ms !important;
+        animation-iteration-count: 1 !important;
+        transition-duration: .01ms !important;
+        scroll-behavior: auto !important;
+      }
+    }
   </style>
 </head>
 <body>
-  <!-- الشريط العلوي والقائمة -->
+  <a class="skip-link" href="#main" data-lang="ar">تخطَّ إلى المحتوى</a>
+  <a class="skip-link" href="#main" data-lang="en" hidden>Skip to content</a>
+
+  <!-- NAVBAR -->
+  <nav class="navbar" aria-label="الشريط العلوي">
+    <div class="container nav-inner">
+      <a class="brand" href="/index.html" aria-label="العودة للرئيسية">
+        <img src="https://g.top4top.io/p_3516rfttb1.jpg" alt="شعار مجلس طلاب خطوة" class="logo" width="40" height="40" decoding="async" loading="lazy">
+        <span data-lang="ar">مجلس طلاب خطوة</span>
+        <span data-lang="en" hidden>Khotwa Student Council</span>
+      </a>
+
+      <button id="menu-toggle" class="menu-toggle" type="button" aria-controls="primary-nav" aria-expanded="false" aria-label="فتح وإغلاق القائمة">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true"><path d="M4 7h16M4 12h16M4 17h16"/></svg>
+        <span data-lang="ar">القائمة</span>
+        <span data-lang="en" hidden>Menu</span>
+      </button>
+
+      <div class="nav-links" id="primary-nav" data-open="false" aria-hidden="true">
+        <a href="/about.html"><span data-lang="ar">من نحن</span><span data-lang="en" hidden>About</span></a>
+        <a href="/news.html" aria-current="page"><span data-lang="ar">الأخبار</span><span data-lang="en" hidden>News</span></a>
+        <a href="/events.html"><span data-lang="ar">الفعاليات</span><span data-lang="en" hidden>Events</span></a>
+        <a href="/calendar.html"><span data-lang="ar">التقويم</span><span data-lang="en" hidden>Calendar</span></a>
+        <a href="/resources.html"><span data-lang="ar">الموارد</span><span data-lang="en" hidden>Resources</span></a>
+        <a href="/contact.html"><span data-lang="ar">تواصل</span><span data-lang="en" hidden>Contact</span></a>
+        <button id="lang-toggle" class="lang-toggle" type="button" aria-label="تبديل اللغة">English</button>
+      </div>
+    </div>
+  </nav>
+
   <main class="container" id="main">
+    <!-- Header -->
     <section>
       <div class="section-head">
         <h1 data-lang="ar">الأخبار</h1>
@@ -58,19 +310,19 @@
       <p class="muted" data-lang="ar">كل جديد عن مجلس طلاب خطوة: إعلانات، مبادرات، ونتائج فعاليات.</p>
       <p class="muted" data-lang="en" hidden>All updates about Khotwa Student Council: announcements, initiatives, and recaps.</p>
 
-      <!-- أدوات الفلترة -->
       <div class="tools" style="margin-top:1rem">
         <div class="search" role="search">
+          <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" aria-hidden="true"><circle cx="11" cy="11" r="7"/><path d="m21 21-4.3-4.3"/></svg>
           <input id="q" type="search" placeholder="ابحث في الأخبار…" aria-label="ابحث في الأخبار">
         </div>
-        <button class="chip" data-filter="all" data-active="true" aria-pressed="true">الكل</button>
-        <button class="chip" data-filter="ann">إعلانات</button>
-        <button class="chip" data-filter="event">فعاليات</button>
-        <button class="chip" data-filter="media">تغطيات</button>
+        <button class="chip" data-filter="all" data-active="true" aria-pressed="true"><span data-lang="ar">الكل</span><span data-lang="en" hidden>All</span></button>
+        <button class="chip" data-filter="ann" aria-pressed="false"><span data-lang="ar">إعلانات</span><span data-lang="en" hidden>Announcements</span></button>
+        <button class="chip" data-filter="event" aria-pressed="false"><span data-lang="ar">فعاليات</span><span data-lang="en" hidden>Events</span></button>
+        <button class="chip" data-filter="media" aria-pressed="false"><span data-lang="ar">تغطيات</span><span data-lang="en" hidden>Media</span></button>
       </div>
     </section>
 
-    <!-- عرض الأخبار -->
+    <!-- Posts -->
     <section aria-live="polite">
       <div class="grid grid-3" id="posts">
         <!-- سيتم ملؤها تلقائيًا من data/news.json -->
@@ -78,52 +330,145 @@
     </section>
   </main>
 
+  <footer aria-label="تذييل الموقع">
+    <div class="container foot">
+      <div class="muted">© <span id="year"></span> Khotwa Student Council</div>
+      <a href="https://www.instagram.com/khotwa.sc/" target="_blank" rel="noopener noreferrer">Instagram</a>
+    </div>
+  </footer>
+
   <script>
+    // سنة الحقوق
+    document.getElementById('year').textContent = new Date().getFullYear();
+
+    // منيو + وصولية
+    const menuBtn = document.getElementById('menu-toggle');
+    const primaryNav = document.getElementById('primary-nav');
+    const mq = matchMedia('(min-width:901px)');
+    function setMenu(open){
+      primaryNav.setAttribute('data-open', String(open));
+      menuBtn.setAttribute('aria-expanded', String(open));
+      primaryNav.setAttribute('aria-hidden', String(!open && !mq.matches));
+      if(open){ primaryNav.querySelector('a,button')?.focus(); }
+    }
+    function initMenu(){
+      primaryNav.setAttribute('data-open','false');
+      menuBtn.setAttribute('aria-expanded','false');
+      primaryNav.setAttribute('aria-hidden', mq.matches ? 'false' : 'true');
+    }
+    initMenu();
+    menuBtn.addEventListener('click',()=> setMenu(primaryNav.getAttribute('data-open')!=='true'));
+    mq.addEventListener('change', e=>{
+      primaryNav.setAttribute('data-open','false');
+      menuBtn.setAttribute('aria-expanded','false');
+      primaryNav.setAttribute('aria-hidden', e.matches ? 'false' : 'true');
+    });
+    document.addEventListener('click', (e)=>{
+      const open = primaryNav.getAttribute('data-open')==='true';
+      if(open && !primaryNav.contains(e.target) && !menuBtn.contains(e.target)) setMenu(false);
+    });
+    document.addEventListener('keydown', (e)=>{ if(e.key==='Escape') setMenu(false); });
+
+    // اللغة
+    const toggleBtn = document.getElementById('lang-toggle');
+    const qInput = document.getElementById('q');
+    let isEn = localStorage.getItem('khotwa_lang') === 'en';
+    function setLang(en){
+      document.querySelectorAll('[data-lang="ar"]').forEach(el => el.hidden = en);
+      document.querySelectorAll('[data-lang="en"]').forEach(el => el.hidden = !en);
+      document.documentElement.lang = en ? 'en' : 'ar';
+      document.documentElement.dir  = en ? 'ltr' : 'rtl';
+      toggleBtn.textContent = en ? 'العربية' : 'English';
+      toggleBtn.setAttribute('aria-pressed', String(en));
+      qInput.placeholder = en ? 'Search news…' : 'ابحث في الأخبار…';
+      localStorage.setItem('khotwa_lang', en ? 'en' : 'ar');
+      applyFilter(); // لإعادة الفلترة بعد تغيير اللغة
+    }
+    toggleBtn.addEventListener('click',()=> setLang(!(localStorage.getItem('khotwa_lang') === 'en')));
+    setLang(isEn);
+
+    // فلترة الأخبار
+    const chips = Array.from(document.querySelectorAll('.chip'));
+    function applyFilter(){
+      const posts = Array.from(document.querySelectorAll('.post')); // بعد التحميل
+      const activeBtn = chips.find(c=>c.dataset.active==="true");
+      const active = activeBtn?.dataset.filter || 'all';
+      const term = (qInput.value||'').trim().toLowerCase();
+      posts.forEach(p=>{
+        const tagOK = (active==='all') || (p.dataset.tags||'').includes(active);
+        const txt = p.textContent.toLowerCase();
+        const termOK = !term || txt.includes(term);
+        p.style.display = (tagOK && termOK) ? '' : 'none';
+      });
+      chips.forEach(b=> b.setAttribute('aria-pressed', String(b===activeBtn)));
+    }
+    chips.forEach(ch=>{
+      ch.addEventListener('click', ()=>{
+        chips.forEach(c=>c.dataset.active="false");
+        ch.dataset.active="true";
+        applyFilter();
+      });
+    });
+    qInput.addEventListener('input', applyFilter);
+
+    // تحميل الأخبار من /data/news.json
     async function loadNews(){
-      try {
+      try{
         const res = await fetch('/data/news.json', { cache:'no-cache' });
         if (!res.ok) throw new Error('Failed to load news.json');
         const data = await res.json();
         const postsEl = document.getElementById('posts');
         postsEl.innerHTML = '';
 
-        if(!Array.isArray(data) || data.length === 0) {
+        if(!Array.isArray(data) || data.length===0){
           postsEl.innerHTML = '<div class="muted">لا توجد أخبار حالياً.</div>';
           return;
         }
 
-        data.sort((a,b) => new Date(b.date) - new Date(a.date));
+        data.sort((a,b)=> new Date(b.date) - new Date(a.date));
 
-        data.forEach(item => {
+        data.forEach(item=>{
           const article = document.createElement('article');
           article.className = 'post';
-          const tagsLower = (item.tags || []).map(t => String(t).toLowerCase());
-          const typeTag = tagsLower.find(t => ['ann','event','media'].includes(t)) || 'ann';
+
+          // خذ تصنيف رئيسي (ann/event/media) إن وُجد
+          const tagsLower = (item.tags||[]).map(t=>String(t).toLowerCase());
+          const typeTag = tagsLower.find(t=>['ann','event','media'].includes(t)) || 'ann';
           article.dataset.tags = typeTag;
 
           const arDate = new Date(item.date).toLocaleDateString('ar-EG');
           const enDate = new Date(item.date).toLocaleDateString('en-AU');
 
           article.innerHTML = `
-            ${item.image ? `<img src="${item.image}" alt="${(item.title?.ar || '').replace(/"/g, '&quot;')}" loading="lazy" decoding="async">` : `<div style="aspect-ratio:16/9;background:#f3f4f6"></div>`}
+            ${item.image ? `<img src="${item.image}" alt="${(item.title?.ar||'').replace(/"/g,'&quot;')}" loading="lazy" decoding="async">` : `<div style="aspect-ratio:16/9;background:#f3f4f6"></div>`}
             <div class="body">
               <div class="meta">
-                <span>${arDate}</span>
-                <span>${enDate}</span>
+                <span data-lang="ar">${arDate}</span>
+                <span data-lang="en" hidden>${enDate}</span>
                 <span>•</span>
-                <span>${(item.tags || []).join('، ')}</span>
+                <span data-lang="ar">${(item.tags||[]).join('، ')}</span>
+                <span data-lang="en" hidden>${(item.tags||[]).join(', ')}</span>
               </div>
-              <h3>${item.title?.ar || ''}</h3>
-              <p class="muted">${item.summary?.ar || ''}</p>
+              <h3 data-lang="ar">${item.title?.ar||''}</h3>
+              <h3 data-lang="en" hidden>${item.title?.en||''}</h3>
+              <p class="muted" data-lang="ar">${item.summary?.ar||''}</p>
+              <p class="muted" data-lang="en" hidden>${item.summary?.en||''}</p>
+              <div class="tags">${(item.tags||[]).map(t=>`<span class="tag">${t}</span>`).join('')}</div>
+              ${item.url ? `<a class="more" href="${item.url}" target="_blank" rel="noopener"><span data-lang="ar">المزيد</span><span data-lang="en" hidden>More</span></a>` : ''}
             </div>
           `;
           postsEl.appendChild(article);
         });
-      } catch (err) {
+
+        applyFilter();
+      }catch(err){
         console.error('فشل تحميل الأخبار:', err);
       }
     }
     loadNews();
   </script>
+
+  <!-- يفعّل توصيل لوحة الإدارة (لا يغيّر الشكل) -->
+  <script src="/assets/cms-boot.js" defer></script>
 </body>
 </html>
